# PicoSwitchController

./: .gitignore  CMakeLists.txt  FIRMWARE_README.md  PICO_SETUP.md  README.md  test_pico.py
include/: CommandParser.h  FastLogger.h  SwitchBluetooth.h  SwitchConsts.h  btstack_config.h
src/: CMakeLists.txt  CommandParser.cpp  FastLogger.cpp  SwitchBluetooth.cpp  main.cpp
